--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="amount_of_selling">매도량</string>
     <string name="buying">매수</string>
     <string name="selling">매도</string>
+    <string name="payment_first_message">시작 자금 1000만원을 지급받았습니다</string>
+    <string name="transaction_successful_message">거래가 성사되었습니다</string>
+    <string name="transaction_lack_krw_message">잔액이 부족합니다</string>
+    <string name="trasaction_lack_currency_message">화폐량이 부족합니다</string>
 </resources>
