--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="transaction_lack_krw_message">잔액이 부족합니다</string>
     <string name="trasaction_lack_currency_message">화폐량이 부족합니다</string>
     <string name="hold_amount_text">보유량: %.06f %s</string>
-    <string name="hold_krw_text_with_bracket">( %d KRW )</string>
+    <string name="hold_krw_text_with_bracket">%s KRW</string>
     <string name="hold_krw_text">보유 금액: %d</string>
     <string name="transaction_wrong_message">값이 잘못되었습니다</string>
+    <string name="activity_title_my_wallet">내 자산</string>
 </resources>
