[#1] 코인 급락 표시 추가, 수정된 디자인 적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="hold_krw_text">보유 금액: %d</string>
     <string name="transaction_wrong_message">값이 잘못되었습니다</string>
     <string name="activity_title_my_wallet">내 자산</string>
+    <string name="button_add_currency_text">화폐 추가하기</string>
 </resources>
